# blanewarrene

./: .env.example  .gitignore  CLAUDE.md  README.md  morning-news-brief-prompt.md  pyproject.toml  signal-watch-instructions.md  strategic-gtm-intel-prompt.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  docs-issue.yml  new-prompt-idea.yml  plugin-bug.yml  plugin-feature.yml  prompt-feedback.yml  prompt-improvement.yml
.github/workflows/: release-clb.yml  release-interview.yml  (+3 more)
Notes2Notion/: LICENSE  Notes2NotionUX.applescript  README.md  install_app.sh  pyproject.toml
Notes2Notion/src/notes2notion/: __init__.py  applescript.py  attachments.py  cli.py  converter.py  extractor.py  models.py  writer.py
announcements/: rollout-calendar.md  social-posts.md  v0.1.0-substack.md  v0.2.0-substack.md  website-cta.md  welcome-email.md
articles/: 2026-05-05-the-gap-nobody-owns.md  LinkedIn-Salesforce-Fin-Post.md  Substack-AI-Foundations-Draft.md  Substack-Prioritization-Override-Draft.md  Substack-Routing-Discipline-Draft.md
pre-call-briefing/: CONTRIBUTING.md  README.md  pre-call-briefing.md
prompts/: comparative-landscape-brief-prompt.md  competitive-brief-generator-prompt.md  course-inbox-mastery.md  course-the-ai-interview.md  llm-memory-audit-prompts.md  signal-watch-instructions.md  teachable-course-builder-copilot.md  teachable-course-builder-gemini  teachable-course-builder-prompt.md
referral-sheet/: blane-warrene-referral.html
signal-watch-api/: .env.example  .gitignore  requirements.txt
(+68 files in other folders)
